# aienglish-app

./: .dockerignore  .env.local  .gitignore  Dockerfile  Makefile  README-Docker.md  deploy.sh  healthcheck.sh  next.config.ts  nginx.conf  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  后端设计.md  设计文档.md
backend/: .env  Dockerfile  aienglish.db  alembic.ini  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 377c0fa12420_remove_selected_answer_field.py  8b44c00e1d60_add_word_and_translation_answer_fields_.py
backend/app/: db.py  main.py
backend/app/core/: security.py
backend/app/models/: __init__.py  question_model.py  sentence_model.py  user_answer_model.py  user_mistake_model.py  user_model.py  user_vocab_model.py
backend/app/routers/: __init__.py  auth_router.py  mistakes_router.py  monitor_router.py  practice_router.py  vocab_router.py
backend/app/schemas/: __init__.py  question_schema.py  sentence_schema.py  user_answer_schema.py  user_schema.py  user_vocab_schema.py
backend/app/services/: __init__.py  auth_service.py  mistake_service.py  practice_service.py  user_service.py  vocab_service.py
src/aienglish_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/app/: globals.css  layout.tsx  page.tsx
src/app/login/: page.tsx
src/app/mistakes/: page.tsx
src/app/monitor/: page.tsx
src/app/practice/: page.tsx
src/app/register/: page.tsx
src/app/review/: page.tsx
src/app/vocab/: page.tsx
src/components/: AuthGuard.tsx  Navbar.tsx
src/lib/: api.ts
(+8 files in other folders)
