[project]
name = "aienglish-app-backend"
version = "0.1.0"
description = "Backend for AI English Learning App"
requires-python = ">=3.8"
dependencies = [
    "fastapi[all]>=0.100.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.10.6",
    "langchain-openai>=0.1.0",
    "redis"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
backend-path = ["."]

[pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
